apps/hello_app/hello_app_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: salutations-deployment
  labels:
    app: salutations
spec:
  replicas: 3
  selector:
    matchLabels:
      app: salutations
  template:
    metadata:
      labels:
        app: salutations
    spec:
      containers:
      - name: salutations-globe
        image: justatad/salutations_globe
        ports:
        - containerPort: 8080
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"

---

kind: Service
apiVersion: v1
metadata:
  name: salutations-service
spec:
  type: NodePort
  selector:
    app: salutations
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
